--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,12 @@
 services:
-  dash-app:
-    build: .
-    container_name: dash_app
-    restart: always
-    expose:
-      - "8050"
-    environment:
-      - PORT=8050
-
-  nginx:
-    image: nginx:alpine
-    container_name: dash_nginx
-    restart: always
+  vish:
+    image: python:3.12-slim
+    container_name: vish
     ports:
-      - "80:80"
+      - "8050:8050"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - dash-app
+      - .:/app
+    working_dir: /app
+    command: >
+      sh -c "pip install --no-cache-dir -r requirements.txt &&
+             python app.py"
